Changelog for Articles.

Articles 1.4.4
===============================
- [#6639] Add option to change default sorting for Articles in mgr container grid
- [#7001] Fix issue where disabling comments prevented other placeholders from displaying
- [#6980] Fix issue with fallback Twitter feed tpl
- [#6850] Enable multiple Articles snippet calls per page
- [#6625] Add in longtitle for Container in General Settings
- Fix issue where changing template settings did not activate save btn
- Add German, Russian, Czech translations
- [#6626] Improve pub-date checking on WordPress import
- [#6601] Fix template variables tab showing when creating a new article
- [#6966] Fix issue with non-web contexts
- Update Quip to 2.2.0-pl

Articles 1.4.3
===============================
- [#6553] Fix issue with build where snippets were set as chunks
- Update tagLister to 1.1.5

Articles 1.4.2
===============================
- Add Articles snippet for easy displaying of articles anywhere on site
- [#6534] Add confirmation for delete article in grid
- [#6535] Fix issue with incorrect include reference for update services
- [#6535] Fix issue with url generation for twitter posting on first save
- [#6542] Fix right-click edit article from grid issue

Articles 1.4.1
===============================
- Add in container calls to each Article to allow sidebars
- [#6471] Fix issue with MODX import when no TV value is set yet TV is set to import
- [#6490] Fix missing <ul> in container template

Articles 1.4.0
===============================
- Add limiter for number of hashtags that are tweeted
- [#6457] Allow option of posting Article title/url/tags to Twitter on publish
- [#6430] Fix RSS sample template

Articles 1.3.0
===============================
- Add "Other Parameters" for listing snippet, which allows you to pass other properties to the getPage/getResources call
- Add option to Require Authentication for commenting
- Upgrade Archivist to 1.2.2-pl

Articles 1.2.1
===============================